@@ -1,0 +1,5 @@
+#include "current_state.h"
+
+std::string CurrentState::s_Program;
+size_t CurrentState::s_Generation = 0;
+
