@@ -8,6 +8,9 @@ Snapshot ????-??-?? ToDo
  * Add program optimization.
  * Move VM into library.
 
+Now
+ * Add support for current state.
+
 Version 0.0.0.7 2010-12-01
  * Make GP::CheckForParam more strict.
  * Add static check with ERROR in memory and world.
